syntax = "proto3";
package auth;

service AuthService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);
  rpc CompleteOnboarding(CompleteOnboardingRequest) returns (OnboardingResponse);
  rpc OAuthSignIn(OAuthSignInRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message SignInRequest {
  string email = 1;
  string phone = 2;
}

message SignInResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOtpRequest {
  string email = 1;
  string phone = 2;
  string code = 3;
}

message VerifyOtpResponse {
  bool success = 1;
  string message = 2;
  string accessToken = 3;
  bool isNewUser = 4;
  bool isOnboarded = 5;
}

message CompleteOnboardingRequest {
  string userId = 1;
  string name = 2;
  string gender = 3;
  string preferredLanguage = 4;
  string preferredCurrency = 5;
  repeated string travelerTypes = 6;
  repeated string transportationPreferences = 7;
  repeated string foodDrinkPreferences = 8;
  repeated string sriLankaVibes = 9;
}

message OnboardingResponse {
  bool success = 1;
  string message = 2;
  string id = 3;
  string email = 4;
  string phone = 5;
  string name = 6;
  string gender = 7;
  string preferredLanguage = 8;
  string preferredCurrency = 9;
  repeated string travelerTypes = 10;
  repeated string transportationPreferences = 11;
  repeated string foodDrinkPreferences = 12;
  repeated string sriLankaVibes = 13;
  string role = 14;
  bool isOnboarded = 15;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string phone = 3;
  string name = 4;
  string gender = 5;
  string preferredLanguage = 6;
  string preferredCurrency = 7;
  string role = 8;
  bool isOnboarded = 9;
}

message OAuthSignInRequest {
  string email = 1;
  string name = 2;
  string providerId = 3;
  string provider = 4;
}

message AuthResponse {
  string accessToken = 1;
  bool isNewUser = 2;
  bool isOnboarded = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}